import { query } from "../config/db.js"

export const Product = {
  async ensureTable() {
    const sql = `
      CREATE TABLE IF NOT EXISTS products (
      id SERIAL PRIMARY KEY,
      name VARCHAR(100) NOT NULL,
      slug VARCHAR(100) UNIQUE NOT NULL,
      description TEXT,
      product_base_url VARCHAR(255),
      product_namespace VARCHAR(100),
      tenant_id VARCHAR(100),
      host_base_url VARCHAR(255),
      created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
  )
    `
    await query(sql)
  },

  async createTable() {
    await this.ensureTable()
    console.log("Products table ready")
  },

  async ensureMetadataColumns() {
    await this.ensureTable()

    const sql = `
      ALTER TABLE products
      ADD COLUMN IF NOT EXISTS tenant_id VARCHAR(100),
      ADD COLUMN IF NOT EXISTS host_base_url VARCHAR(255)
    `
    await query(sql)
  },

  async create({ name, slug, description, tenant_id, host_base_url }) {
    await this.ensureMetadataColumns()

    const sql = `
      INSERT INTO products (name, slug, description, tenant_id, host_base_url)
      VALUES ($1, $2, $3, $4, $5)
      RETURNING *
    `
    const result = await query(sql, [name, slug, description, tenant_id, host_base_url])
    return result.rows[0]
  },

  async findById(id) {
    await this.ensureMetadataColumns()

    const sql = `SELECT * FROM products WHERE id = $1`
    const result = await query(sql, [id])
    return result.rows[0]
  },

  async findAll() {
    await this.ensureMetadataColumns()

    const sql = `
    SELECT 
      p.*,
      COUNT(l.id) AS license_count
    FROM products p
    LEFT JOIN licenses l ON l.product_id = p.id
    GROUP BY p.id
    ORDER BY p.created_at DESC
  `
    const result = await query(sql)
    return result.rows
  },
}

export default Product
